# os

./: Cargo.toml  boot  notes.txt
demos/: hw  lesson2.asm
notes/paging/: translation.md
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: mod.rs
src/scheduler/: mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
src/vga/: color_code.rs  mod.rs  writer.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
