[package]
name = "os"
version = "0.1.0"
authors = ["PierreLeidbring <pierre.leidbring@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.8.0"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.9.6"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
default-target = "x86_64-os.json"
#run-command = ["qemu-system-x86_64", "-display", "sdl", "-drive", "format=raw,file=target/x86_64-os/debug/bootimage-os.bin"]
run-command = ["qemu-system-x86_64", "-display", "sdl", "-drive", "format=raw,file={}"]
test-args = ["-display", "sdl", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
