[package]
name = "os"
version = "0.1.0"
authors = ["PierreLeidbring <pierre.leidbring@gmail.com>"]
edition = "2018"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = {version = "0.8.0", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.9.6"
uart_16550 = "0.2.0"
pic8259_simple = "0.1.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.8.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[package.metadata.bootimage]
default-target = "x86_64-os.json"
#run-command = ["qemu-system-x86_64", "-display", "sdl", "-drive", "format=raw,file=target/x86_64-os/debug/bootimage-os.bin"]
run-command = ["qemu-system-x86_64", "-display", "sdl", "-drive", "format=raw,file={}"]
test-args = ["-display", "none", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]
test-success-exit-code = 33		# (0x0 << 1) | 1
